# hermes

./: .gitignore  Gemfile  LICENSE  README.md  Rakefile  hermes.cabal  stack.yaml
adr/: 0001-record-architecture-decisions.md  0002-express-features-using-gherkin.md  0003-expose-a-rest-api.md  0004-use-an-event-sourcing-system.md  0005-use-haskell-as-implementation-langage.md  0006-immutable-events.md  0007-subscribers-subscriptions.md  0008-notifications.md  0009-push-notifications.md
app/: ApiType.hs  Main.hs
features/: 01-declare-event.feature  02-subscribe.feature
features/step_definitions/: events_step.rb
features/support/: env.rb
src/Control/Hermes/: Actions.hs  Persistence.hs  RabbitMQ.hs  Types.hs
src/Control/Hermes/Persistence/: Persistent.hs  SQLite.hs
test/Control/Hermes/: ActionsSpec.hs  PersistenceSpec.hs  RabbitMQUtils.hs
