name:                hermes
version:             0.1.0.0
synopsis:            Event management system
-- description:
homepage:            https://github.com/blackheaven/hermes#readme
license:             BSD2
license-file:        LICENSE
author:              Gautier DI FOLCO
maintainer:          gautier.difolco@gmail.com
copyright:           2019 Gautier DI FOLCO
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  other-modules:       
  build-depends:       base >= 4.12 && < 5
  default-language:    Haskell2010

executable hermes
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       ApiType
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hermes
                     , servant >= 0.15 && < 0.16
                     , servant-server >= 0.15 && < 0.16
                     , aeson >= 1.4.2.0 && < 1.5
                     , warp >= 3.2.27 && < 3.3
                     , wai-logger >= 2.3.5 && < 2.4
  default-language:    Haskell2010

executable hermes-memory
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       ApiType
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hermes
                     , servant >= 0.15 && < 0.16
                     , servant-server >= 0.15 && < 0.16
                     , aeson >= 1.4.2.0 && < 1.5
                     , warp >= 3.2.27 && < 3.3
                     , wai-logger >= 2.3.5 && < 2.4
  default-language:    Haskell2010

test-suite hermes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       HermesSpec
  main-is:             Spec.hs
  build-depends:       base
                     , hermes
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/blackheaven/hermes
