name:                hermes
version:             0.1.0.0
synopsis:            Event management system
-- description:
homepage:            https://github.com/blackheaven/hermes#readme
license:             BSD2
license-file:        LICENSE
author:              Gautier DI FOLCO
maintainer:          gautier.difolco@gmail.com
copyright:           2019 Gautier DI FOLCO
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Werror -fwarn-missing-methods
  exposed-modules:     Control.Hermes.Actions
                     , Control.Hermes.Types
                     , Control.Hermes.Persistence
                     , Control.Hermes.Persistence.SQLite
                     , Control.Hermes.Persistence.Persistent
  build-depends:       base >= 4.12 && < 5
                     , aeson >= 1.4.2.0 && < 1.5
                     , bytestring >= 0.10.8.2 && < 0.10.9
                     , containers >= 0.6.0.1 && < 0.6.1
                     , either >= 5.0.1.1 && < 5.0.2
                     , exceptions >= 0.10.2 && < 0.11
                     , http-api-data >= 0.4 && < 0.5
                     , monad-logger >= 0.3.30 && < 0.4
                     , path-pieces >= 0.2.1 && < 0.3
                     , persistent >= 2.9.2 && < 2.10
                     , persistent-sqlite >= 2.9.2 && < 2.10
                     , persistent-template >= 2.5.4 && < 2.6
                     , resourcet >= 1.2.2 && < 1.3
                     , text >= 1.2.3.1 && < 1.2.4
                     , transformers >= 0.5.6.2 && < 0.5.7
                     , uuid >= 1.3.13 && < 1.4
                     , utf8-string >= 1.0.1.1 && < 1.1
  default-language:    Haskell2010

executable hermes
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       ApiType
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hermes
                     , aeson >= 1.4.2.0 && < 1.5
                     , bytestring >= 0.10.8.2 && < 0.10.9
                     , servant >= 0.15 && < 0.16
                     , servant-server >= 0.15 && < 0.16
                     , text >= 1.2.3.1 && < 1.2.4
                     , uuid >= 1.3.13 && < 1.4
                     , warp >= 3.2.27 && < 3.3
                     , wai-logger >= 2.3.5 && < 2.4
  default-language:    Haskell2010

test-suite hermes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Control.Hermes.PersistenceSpec
                     , Control.Hermes.ActionsSpec
  main-is:             Spec.hs
  build-depends:       base
                     , hermes
                     , aeson >= 1.4.2.0 && < 1.5
                     , hspec
                     , QuickCheck
                     , text >= 1.2.3.1 && < 1.2.4
                     , uuid >= 1.3.13 && < 1.4
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/blackheaven/hermes
