name:                hermes
version:             0.1.0.0
synopsis:            Event management system
-- description:
homepage:            https://github.com/blackheaven/hermes#readme
license:             BSD2
license-file:        LICENSE
author:              Gautier DI FOLCO
maintainer:          gautier.difolco@gmail.com
copyright:           2019 Gautier DI FOLCO
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Werror -fwarn-missing-methods
  exposed-modules:     Control.Hermes.Actions
                     , Control.Hermes.Types
                     , Control.Hermes.Persistence
                     , Control.Hermes.Persistence.SQLite
                     , Control.Hermes.Persistence.Persistent
                     , Control.Hermes.RabbitMQ
  build-depends:       base >= 4.12 && < 5
                     , aeson >= 1.4.2.0 && < 1.5
                     , amqp >= 0.19.1 && < 0.21
                     , amqp-streamly >= 0.1.0 && < 0.2
                     , bytestring >= 0.10.10.0 && < 0.11
                     , containers >= 0.6.2.1 && < 0.7
                     , either >= 5.0.1.1 && < 5.0.2
                     , exceptions >= 0.10.2 && < 0.11
                     , http-api-data >= 0.4 && < 0.5
                     , monad-logger >= 0.3.30 && < 0.4
                     , path-pieces >= 0.2.1 && < 0.3
                     , persistent >= 2.10.5.2 && < 2.11
                     , persistent-sqlite >= 2.10.6.2 && < 2.11
                     , persistent-template >= 2.8.2.3 && < 2.9
                     , resourcet >= 1.2.2 && < 1.3
                     , text >= 1.2.4.0 && < 1.2.5
                     , transformers >= 0.5.6.2 && < 0.5.7
                     , streamly >= 0.7.2 && < 0.8
                     , uuid >= 1.3.13 && < 1.4
                     , utf8-string >= 1.0.1.1 && < 1.1
  default-language:    Haskell2010

executable hermes
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       ApiType
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hermes
                     , aeson
                     , amqp
                     , bytestring
                     , HTTP == 4000.3.*
                     , network-uri >= 2.6.3.0 && < 2.6.4
                     , servant >= 0.16.2 && < 0.17
                     , servant-server >= 0.16.2 && < 0.17
                     , servant-streamly >= 0.1.0 && < 0.2
                     , streamly
                     , text
                     , uuid
                     , warp >= 3.3.13 && < 3.4
                     , wai-logger >= 2.3.5 && < 2.4
  default-language:    Haskell2010

test-suite hermes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Control.Hermes.PersistenceSpec
                     , Control.Hermes.ActionsSpec
                     , Control.Hermes.RabbitMQUtils
  main-is:             Spec.hs
  build-depends:       base
                     , hermes
                     , aeson
                     , amqp
                     , async >= 2.2.2 && < 2.3
                     , hspec >= 2.7.1 && < 2.8
                     , hspec-core >= 2.7.1 && < 2.8
                     , process >= 1.6.8.0 && < 1.7
                     , streamly
                     , testcontainers == 0.1.*
                     , text
                     , uuid
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/blackheaven/hermes
